--- a/web-template/aside_nav.html
+++ b/web-template/aside_nav.html
@@ -61,22 +61,7 @@
 											<span class="nav-title">Main</span>
 										</a>
 									</li>
-									<li>
-										<a href="#" class="has-arrow" aria-expanded="false">
-											<span class="has-icon">
-												<i class="icon-beaker"></i>
-											</span>
-											<span class="nav-title">Supplier Details</span>
-										</a>
-                                        <ul aria-expanded="false">
-											<li>
-								                <a href='suppliers.html'>View</a>
-                                            </li>
-                                            <li>
-                                                <a href='new_supplier.html'>Add</a>
-                                            </li>
-                                        </ul>
-									</li>
+									
                                     <li>
                                         <a href="#" class="has-arrow" aria-expanded="false">
 											<span class="has-icon">
@@ -100,6 +85,24 @@
 											</span>
 											<span class="nav-title">Manage Issued Assets</span>
 										</a>
+									</li>
+                                    <li>
+										<a href="suppliers.html">
+											<span class="has-icon">
+												<i class="icon-beaker"></i>
+											</span>
+											<span class="nav-title">Supplier Details</span>
+										</a>
+<!--
+                                        <ul aria-expanded="false">
+											<li>
+								                <a href='suppliers.html'>View</a>
+                                            </li>
+                                            <li>
+                                                <a href='new_supplier.html'>Add</a>
+                                            </li>
+                                        </ul>
+-->
 									</li>
                                     <li>
 										<a href="#" class="has-arrow" aria-expanded="false">
