Edited new supplier and add new location page

--- a/web-template/aside_nav.html
+++ b/web-template/aside_nav.html
@@ -79,12 +79,32 @@
                                         </ul>
 									</li>
                                     <li>
-										<a href="#">
+										<a href="#" class="has-arrow" aria-expanded="false">
 											<span class="has-icon">
 												<i class="icon-assignment"></i>
 											</span>
 											<span class="nav-title">Manage Issued Assets</span>
 										</a>
+                                        <ul aria-expanded="false">
+											<li>
+												<a href='#' class="has-arrow" aria-expanded="false">
+                                                    <span class="nav-title">Issued Asset</span>
+                                                </a>
+                                                <ul aria-expanded="false">
+													<li>
+														<a href='users.html'>View</a>
+													</li>
+                                                    <li>
+														<a href='new_user.html'>Add</a>
+													</li>
+												</ul>
+											</li>
+                                            <li>
+												<a href='#'>
+                                                    <span class="nav-title">Available Asset</span>
+                                                </a>
+											</li>
+                                        </ul>
 									</li>
                                     <li>
 										<a href="suppliers.html">
@@ -109,7 +129,7 @@
 											<span class="has-icon">
 												<i class="icon-view_day"></i>
 											</span>
-											<span class="nav-title">Admin</span>
+											<span class="nav-title">Advance</span>
 										</a>
 										<ul aria-expanded="false">
 											<li>
@@ -134,7 +154,7 @@
 														<a href='#'>View</a>
 													</li>
                                                     <li>
-														<a href='#'>Add</a>
+														<a href='new_location.html'>Add</a>
 													</li>
 												</ul>
 											</li>
