Added a page and edited some

--- a/web-template/new_equipment.html
+++ b/web-template/new_equipment.html
@@ -284,6 +284,17 @@
                                         </div>
                                         <div class="row gutters">
                                             <div class="col-xl-6 col-lg col-md-6 col-sm-6 col-12">
+                                                <div class="form-group">
+                                                    <label>Status</label>
+                                                    <select class="form-control">
+                                                        <option>Active</option>
+                                                        <option>Inactive</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row gutters">
+                                            <div class="col-xl-6 col-lg col-md-6 col-sm-6 col-12">
                                                 <label>Image File</label>
 												<div class="custom-file">
                                                     <input type="file" class="custom-file-input" id="customFile">
