--- a/web-template/new_location.html
+++ b/web-template/new_location.html
@@ -191,7 +191,7 @@
                                                         <option>Skuadron Penilaian dan Piawaian TUDB</option>
                                                     </select>
                                                 </div>
-											</div>
+                                            </div>
                                         </div>
                                         <div class="row gutters">
                                             <div class="col-xl-6 col-lg col-md-6 col-sm-6 col-12">
@@ -228,7 +228,15 @@
                                                         <option>Technical Equipment Maintence Department (TEMD)</option>
                                                     </select>
                                                 </div>
-											</div>
+                                            </div>
+                                        </div>
+                                        <div class="row gutters">
+                                            <div class="col-xl-6 col-lg col-md-6 col-sm-6 col-12">
+                                                <div class="form-group">
+                                                    <label>Department</label>
+                                                    <input class="form-control" placeholder="Department" type="text">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="row gutters">
                                             <div class="col-xl-6 col-lg col-md-6 col-sm-6 col-12">
