--- a/web-template/new_location_textbox.html
+++ b/web-template/new_location_textbox.html
@@ -165,7 +165,15 @@
                                                     <label>Sub-Unit</label>
                                                     <input class="form-control" placeholder="Sub-Unit" type="text">
                                                 </div>
-											</div>
+                                            </div>
+                                        </div>
+                                        <div class="row gutters">
+                                            <div class="col-xl-6 col-lg col-md-6 col-sm-6 col-12">
+                                                <div class="form-group">
+                                                    <label>Department</label>
+                                                    <input class="form-control" placeholder="Department" type="text">
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="row gutters">
                                             <div class="col-xl-6 col-lg col-md-6 col-sm-6 col-12">
@@ -173,11 +181,11 @@
                                                     <button type="button" class="btn btn-outline-primary btn-rounded">Save</button>
                                                 </div>
                                             </div>
-										</div>
-									</div>
-								</div>
+                                        </div>
+                                    </div>
+                                </div>
                                 
-								<!-- section container end -->
+                                <!-- section container end -->
                             </div>
 						<!-- Row end -->
 					</div>
